devopspro/24Traefik/dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik-system
spec:
  entryPoint:
    - web
  routes:
    - match: Host('dashboard.maferreira94.shop')
      kind: Rule
      services:
        - name: api@internal 
          kind: TraefikService
