devopspro/24Traefik/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
spec:
  entryPoints:
    - web
  routes:
  - match: Host(maferreira94.shop)
    kind: Rule
    services:
    - name: nginx-service
      port: 80
    middlewares: 
      - name: ratelimit
